fix(legend): align displayValue to the right

--- a/src/components/_legend.scss
+++ b/src/components/_legend.scss
@@ -120,9 +120,6 @@ $elasticChartsLegendMaxHeight: $euiSize * 4;
 }
 
 .elasticChartsLegendListItem__displayValue {
-  width: $euiSize * 2;
-  max-width: $euiSize * 2;
-  font-weight: $euiFontWeightMedium;
   text-align: right;
 }
 
